--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
     box-shadow: 0px 5px 10px -2px rgba(0, 0, 0, 0.75);
 padding-left: 5px;
 padding-right: 5px;
+border-radius: 10px;
 }
 .musicv {
     width: 10%;
